@@ -14,10 +14,8 @@
 
 package com.googlesource.gerrit.plugins.its.base.its;
 
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
+import static java.util.stream.Collectors.toList;
+
 import com.google.gerrit.common.data.RefConfigSection;
 import com.google.gerrit.extensions.annotations.PluginName;
 import com.google.gerrit.extensions.api.projects.CommentLinkInfo;
@@ -41,6 +39,7 @@ import com.google.inject.Inject;
 import com.googlesource.gerrit.plugins.its.base.validation.ItsAssociationPolicy;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.regex.Pattern;
 import org.eclipse.jgit.lib.Config;
 import org.slf4j.Logger;
@@ -57,12 +56,7 @@ public class ItsConfig {
   private final Config gerritConfig;
 
   private static final ThreadLocal<Project.NameKey> currentProjectName =
-      new ThreadLocal<Project.NameKey>() {
-        @Override
-        protected Project.NameKey initialValue() {
-          return null;
-        }
-      };
+      ThreadLocal.withInitial(() -> null);
 
   public static void setCurrentProjectName(Project.NameKey projectName) {
     currentProjectName.set(projectName);
@@ -102,7 +96,7 @@ public class ItsConfig {
       RefUpdatedEvent e = (RefUpdatedEvent) event;
       return isEnabled(e.getProjectNameKey(), e.getRefName());
     } else {
-      log.debug("Event " + event + " not recognised and ignored");
+      log.debug("Event {} not recognised and ignored", event);
       return false;
     }
   }
@@ -111,13 +105,9 @@ public class ItsConfig {
     ProjectState projectState = projectCache.get(projectNK);
     if (projectState == null) {
       log.error(
-          "Failed to check if "
-              + pluginName
-              + " is enabled for project "
-              + projectNK.get()
-              + ": Project "
-              + projectNK.get()
-              + " not found");
+          "Failed to check if {} is enabled for project {}: Project not found",
+          pluginName,
+          projectNK.get());
       return false;
     }
 
@@ -191,22 +181,11 @@ public class ItsConfig {
    */
   public Pattern getIssuePattern() {
     Optional<String> match =
-        FluentIterable.from(getCommentLinkInfo(getCommentLinkName()))
-            .filter(
-                new Predicate<CommentLinkInfo>() {
-                  @Override
-                  public boolean apply(CommentLinkInfo input) {
-                    return input.match != null && !input.match.trim().isEmpty();
-                  }
-                })
-            .transform(
-                new Function<CommentLinkInfo, String>() {
-                  @Override
-                  public String apply(CommentLinkInfo input) {
-                    return input.match;
-                  }
-                })
-            .last();
+        getCommentLinkInfo(getCommentLinkName())
+            .stream()
+            .filter(input -> input.match != null && !input.match.trim().isEmpty())
+            .map(input -> input.match)
+            .reduce((a, b) -> b);
 
     String defPattern = gerritConfig.getString("commentlink", getCommentLinkName(), "match");
 
@@ -214,7 +193,7 @@ public class ItsConfig {
       return null;
     }
 
-    return Pattern.compile(match.or(defPattern));
+    return Pattern.compile(match.orElse(defPattern));
   }
 
   /**
@@ -278,15 +257,10 @@ public class ItsConfig {
     NameKey projectName = currentProjectName.get();
     if (projectName != null) {
       List<CommentLinkInfo> commentlinks = projectCache.get(projectName).getCommentLinks();
-      return FluentIterable.from(commentlinks)
-          .filter(
-              new Predicate<CommentLinkInfo>() {
-                @Override
-                public boolean apply(CommentLinkInfo input) {
-                  return input.name.equals(commentlinkName);
-                }
-              })
-          .toList();
+      return commentlinks
+          .stream()
+          .filter(input -> input.name.equals(commentlinkName))
+          .collect(toList());
     }
     return Collections.emptyList();
   }
